# ecosim_rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  icon.pdn  minimal.htm
assets/: copy_texture.glsl  ecosim.glsl  erosion.glsl  game_of_life.glsl  main.glsl  render.glsl  style.css  terrain.glsl
assets/img/: icon.pdn
assets/shape/: smoother.glsl
assets/terrain/: brush.glsl  erosion.glsl  gradient.glsl  random.glsl
src/: app.rs  game_of_life.glsl  main.rs  map.rs  shader_world.rs  terrain.rs  update_thread.rs  util.rs  world.rs  world_renderer.rs
src/app/: mod.rs
src/app/worldgen/: biomes.rs  landscape.rs  mod.rs
src/glsl_expand/: mod.rs
