[package]
name = "ecosim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
sdl2 = { version = "0.35.2", features = ["bundled"] }
egui_sdl2_gl = { path = "egui_sdl2_gl" }
glow = "0.11.2"
rand = "0.8.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
